セキュリティ対応
